@@ -1,3 +1,8 @@
+2009-04-10  Donal K. Fellows  <dkf@users.sf.net>
+
+	* library/tk.tcl: [Bug 2116837]: Add event definitions to handle the
+	standard virtual events when Caps Lock is on.
+
 2009-04-08  Donal K. Fellows  <dkf@users.sf.net>
 
 	* library/demos/widget (addFormattedText): Stop marking demonstrations
